--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,23 @@
 # main links links
 main:
+
+  - title: "Research"
+    url: /Research/
+
+  - title: "Team"
+    url: /Team/
+
   - title: "Publications"
     url: /publications/
 
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+#  - title: "Teaching"
+#    url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "News"
+    url: /News/
     
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Join"
+    url: /Join/
