--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Facilities"
+    url: /facilities/    
 
 #  - title: "Teaching"
 #    url: /teaching/    
