--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Mingyi Wang"
   avatar           : "my_profile.png"
   bio              : "Assistant Professor of Geophysical Sciences"
-  location         : "UChicago"
+  location         : "[UChicago](https://geosci.uchicago.edu/people/mingyi-wang/)"
   employer         :
   pubmed           : 
   email            : "mingyiw@uchicago.edu"
